--- a/empmanagement/src/app/app.component.html
+++ b/empmanagement/src/app/app.component.html
@@ -36,7 +36,7 @@
       <!-- PAGE CONTAINER-->
       <div class="page-container">
           <!-- HEADER DESKTOP-->
-          
+          <app-search></app-search>
           <!-- END HEADER DESKTOP-->
     
           <!--Main content-->
