--- a/empmanagement/src/app/components/emp-list/emp-list.component.html
+++ b/empmanagement/src/app/components/emp-list/emp-list.component.html
@@ -28,7 +28,7 @@
                     <td>{{temEmp.job}}</td>
                     <td>{{temEmp.sal}}</td>
                     <td>{{temEmp.comm}}</td>
-                    <button type="button" class="btn btn-md btn-success" (click)="updateEmp(temEmp.id)">Update</button>
+                    <button type="button" class="btn btn-md btn-success" (click)="updateEmp(temEmp.id)">Update</button>&nbsp;&nbsp;
                     <button type="button" class="btn btn-md btn-danger" (click) = "deleteEmp(temEmp.id)">Delete </button>
 
 
